# person_detection

./: CMakeLists.txt  idf_component.yml  person_detection.c
components/person_detection/: CMakeLists.txt  main_functions.cc  main_functions.h
examples/person_detection_example/: CMakeLists.txt  sdkconfig
examples/person_detection_example/main/: CMakeLists.txt  idf_component.yml  person_detection_example.c
include/: person_detection.h
person_detection/: app_camera_esp.c  app_camera_esp.h  image_provider.cc  image_provider.h  main_functions.cc
